--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,13 +1,6 @@
 <div class="container container-fluid center" [@fadeIn]>    
-    <div class="col">
-        <div class="jumbotron">
-            <h1>{{ title }} (under construction)</h1>
-            <p>Enjoy the funniest pets of our users</p>
-            <div class="btn-group" role="group">
-                <a class="btn btn-outline-primary" role="button">
-                    See pets
-                </a>
-            </div>
-        </div>
-    </div>
+    
 </div>
+<app-pets></app-pets>
+<app-messages></app-messages>
+
