--- a/src/app/components/pet-detail/pet-detail.component.html
+++ b/src/app/components/pet-detail/pet-detail.component.html
@@ -1,9 +1,41 @@
 <div class="col-lg-12" *ngIf="pet">
-    <h2>{{ pet.name | uppercase }}</h2>
-    <div><span>id: </span>{{ pet.id }}</div>
+    <div class="row">
+        <div class="col-lg-4">
+            <h2>{{ pet.name | uppercase }}</h2>
+        </div>
+        <div class="col-lg-4">
+            <h3>{{ pet.kind }}</h3>
+        </div>
+        <div class="col-lg-4">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h4>{{ pet.weight }} grs.</h4>
+                </div>
+                <div class="col-lg-6">
+                    <h4>{{ pet.length }} x {{ pet.height }} cm.</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div>
-        <label>name:
-            {{ pet.name }}
+        <span>
+            id: 
+        </span>
+        {{ pet.id }}
+        <span *ngIf="pet.kind == 'cat'">
+            lives:
+        </span>
+        {{ pet.number_of_lives }}
+    </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <img  class="img-fluid" src="{{ pet.photo_url}}" alt="{{ pet.kind }}">
+        </div>
+    </div>
+    <div>
+        <label>Description:
+            {{ pet.description }}
         </label>
     </div>
 </div>
