--- a/src/app/components/pets/pets.component.html
+++ b/src/app/components/pets/pets.component.html
@@ -1,4 +1,5 @@
-    <div class="col-lg-12" [@fadeIn]>
+<div class="row">
+    <div class="col-lg-6" [@fadeIn]>
 
         <table class="table table-hover">
             <thead class="thead-default">
@@ -8,7 +9,14 @@
                     <th scope="col">Kind</th>
                     <th scope="col">Weight</th>
                     <th scope="col">Height</th>
-                    <th scope="col">Lifes</th>
+                    <th scope="col">Length</th>
+                    <th scope="col">
+                        <button class="btn btn-sm btn-outline-primary" (click)="getFirstPage()"><fa-icon [icon]="faArrowUp"></fa-icon></button>
+                        <button class="btn btn-sm btn-outline-primary" (click)="getPrevPage()"><fa-icon [icon]="faArrowLeft"></fa-icon></button>
+                        <button class="btn btn-sm btn-outline-primary" (click)="getNextPage()"><fa-icon [icon]="faArrowRight"></fa-icon></button>    
+                        <button class="btn btn-sm btn-outline-primary" (click)="getLastPage()"><fa-icon [icon]="faArrowDown"></fa-icon></button>
+                    </th>
+                    
                 </tr>
             </thead>
             <tbody>
@@ -20,19 +28,23 @@
                     <td>{{ pet.kind }}</td>
                     <td>{{ pet.weight }}</td>
                     <td>{{ pet.height }}</td>
-                    <td>{{ pet.number_of_lives }}</td>
+                    <td>{{ pet.length }}</td>
                     <td>
-                        <div class="btn-group" role="group">
-                            <a class="btn btn-outline-success" role="button" [routerLink]="['/pet-detail']">
-                            See
-                            </a>
-
+                        <div class="row">
+                            <div class="col-lg-2">
+                                <img  class="img-fluid" src="{{ pet.photo_url}}" alt="{{ pet.kind }}">
+                            </div>
                         </div>
+                        
                     </td>
+                    
                 </tr>
             </tbody>
         </table>
     </div>
-
-    <app-pet-detail [pet]="selectedPet"></app-pet-detail>
+    <div class="col-lg-6">
+        <app-pet-detail [pet]="selectedPet"></app-pet-detail>
+    </div>
+</div>
+    
     
