--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,8 @@
         <a class="nav-link" [routerLink]="['/pets']" [routerLinkActive]="['active']">
           <span>
             <fa-icon [icon]="faDog"></fa-icon>
-            PetsComponent
+            Pet of the day
+            <fa-icon [icon]="faCat"></fa-icon>
           </span>
         </a>
       </li>
