--- a/src/app/components/pet-detail/pet-detail.component.html
+++ b/src/app/components/pet-detail/pet-detail.component.html
@@ -4,7 +4,7 @@
             <h2>{{ pet.name | uppercase }}</h2>
         </div>
         <div class="col-lg-4">
-            <h3>{{ pet.kind }}</h3>
+            <h3>{{ pet.kind }} - {{ pet.health }}</h3>
         </div>
         <div class="col-lg-4">
             <div class="row">
