pet-day component incluided

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 
     <ul class="nav navbar-nav navbar-right">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/pets']" [routerLinkActive]="['active']">
+        <a class="nav-link" [routerLink]="['/pet-of-the-day']" [routerLinkActive]="['active']">
           <span>
             <fa-icon [icon]="faDog"></fa-icon>
             Pet of the day
